--- a/Weather App/package.json
+++ b/Weather App/package.json
@@ -1,13 +1,14 @@
 {
     "name": "weather-app",
     "private": true,
-    "version": "1.0.0",
+    "version": "1.1.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "start": "serve -s dist"
     },
     "dependencies": {
         "@mdi/js": "^7.4.47",
@@ -15,7 +16,8 @@
         "axios": "^1.7.7",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^6.26.1"
+        "react-router-dom": "^6.26.1",
+        "serve": "^14.2.3"
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
