--- a/Weather App/package.json
+++ b/Weather App/package.json
@@ -1,7 +1,7 @@
 {
     "name": "weather-app",
     "private": true,
-    "version": "1.1.0",
+    "version": "2.0.0",
     "type": "module",
     "scripts": {
         "dev": "vite",
@@ -22,7 +22,7 @@
     "devDependencies": {
         "@eslint/js": "^9.9.0",
         "@tailwindcss/typography": "^0.5.15",
-        "@types/react": "^18.3.3",
+        "@types/react": "^18.3.6",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
         "autoprefixer": "^10.4.20",
@@ -33,8 +33,8 @@
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
         "postcss": "^8.4.44",
-        "prop-types": "^15.8.1",
         "tailwindcss": "^3.4.10",
+        "typescript": "^5.6.2",
         "vite": "^5.4.1"
     }
 }
